# medical_supplement_advisor

./: .gitignore  .pylintrc  ALGORYTM_SUPLEMENTACJI.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Medical Supplement Advisor.command  Medical Supplement Advisor.spec  MedicalSupplementAdvisor.spec  PDF_DOCX_GUIDE.md  README.md  TESTING.md  build_app.py  build_log.txt  config.py  pyproject.toml  requirements.txt  run.py  test_app.sh
.github/workflows/: ci.yml
AutomatorApp.app/: README.md
AutomatorApp.app/Contents/: Info.plist
AutomatorApp.app/Contents/MacOS/: launcher  launcher_debug
Medical Supplement Dashboard.app/Contents/: Info.plist
Medical Supplement Dashboard.app/Contents/MacOS/: launcher
data/: clinical_thresholds.json  dosage_rules.json  interpretation_rules.json  reference_ranges.json  reference_ranges_v2.json  regex_patterns.json  supplements.json  supplements_v2.json  test_categories.json
examples/: analyze_docx.py  sample_combined.json
i18n/: pl.json
src/: main.py
src/core/: advanced_analyzer.py  analyzer.py  interpretation_engine.py  recommendation_engine.py  rule_engine.py
src/gui/: app.py  main_window.py
src/models/: blood_test.py  patient.py  test_analysis.py
src/utils/: data_loader.py  document_parser.py  formatter.py  i18n.py  json_parser.py  logger.py  validator.py
src/web/: app.py
src/web/routers/: api.py  pages.py
tests/: test_advanced_algorithm.py  test_analyzer.py  test_data_loader.py  test_document_parser.py  test_formatter.py  test_i18n.py  test_interpretation_engine.py  test_json_parser.py  test_logger.py  test_recommendation_engine.py  test_rule_engine.py  test_validator.py
tests/test_web/: conftest.py  test_api.py  test_pages.py
(+14 files in other folders)
