[project]
name = "medical-supplement-advisor"
version = "1.0.0"
description = "Medical Supplement Advisor - Python application for generating supplement recommendations"

[tool.poetry.dependencies]
pydantic = ">=2.0.0"
reportlab = ">=4.0.0"
pandas = ">=2.0.0"
python-docx = ">=1.1.0"
pdfplumber = ">=0.10.0"
dejavu-sans = ">=2.37"
PyQt5 = ">=5.15.0"
pyinstaller = ">=6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
isort = ">=5.12.0"
pylint = ">=2.17.0"

[tool.pytest]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--verbose",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_single_line = false
single_line_exclusions = ["from __future__ import"]

[tool.pylint.main]
py-version = "3.13"
ignore-paths = ["venv", ".venv", "build", "dist"]
jobs = 10
persistent = false
suggestion-mode = "similarity"
disable = [
    "C0111",
    "C0103",
    "R0913",
]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
]
max-line-length = 100
max-args = 7
